@@ -1792,8 +1792,9 @@ static void twitter_marshal_format_tweet(PurpleCallback cb, va_list args, void *
 	void* arg6 = va_arg(args, void *); //conv name
 	gboolean arg7 = va_arg(args, gboolean); //is_tweet
 	long long arg8 = va_arg(args, gint64); // in_reply_to_status_id
+	gboolean arg9 = va_arg(args, gboolean); // in_reply_to_status_id
 
-	ret_val = ((gpointer(*)(void *, void *, void *, gint64, gint, void *, gboolean, long long, void *))cb)(arg1, arg2, arg3, arg4, arg5, arg6, arg7, arg8, data);
+	ret_val = ((gpointer(*)(void *, void *, void *, gint64, gint, void *, gboolean, long long, gboolean, void *))cb)(arg1, arg2, arg3, arg4, arg5, arg6, arg7, arg8, arg9, data);
 
 	if (return_val != NULL)
 		*return_val = ret_val;
@@ -1924,7 +1925,8 @@ static void twitter_init(PurplePlugin *plugin)
 			purple_value_new(PURPLE_TYPE_INT), //conv type
 			purple_value_new(PURPLE_TYPE_STRING), //conv_name
 			purple_value_new(PURPLE_TYPE_BOOLEAN), // is_tweet
-			purple_value_new(PURPLE_TYPE_INT64) // in_reply_to_status_id
+			purple_value_new(PURPLE_TYPE_INT64), // in_reply_to_status_id
+			purple_value_new(PURPLE_TYPE_BOOLEAN) // favorited
 			);
 
 	purple_signal_register(purple_conversations_get_handle(), "prpltwtr-received-im", 
